@@ -4,6 +4,10 @@ Changelog
 1.0a1 - unreleased
 ------------------
 
+- Don't configure a ContextDeployer which allows us to skip the contexts
+  examples cleanup.
+  [hannosch]
+
 - Added basic package documentation.
   [hannosch]
 
